Name:                bookbrainz
Version:             0.1
License:             AllRightsReserved

Description:
  BookBrainz is a system for recording information about books - authors,
  books and their various editions, publishing houses, and much much more. This
  documentation is about the code behind BookBrainz and is intended for
  developers.
  .
  There are 2 main areas of BookBrainz:
  .
    1. The BookBrainz namespace itself, which consists of a context-agnostic
       API for working with a BookBrainz database
  .
    2. BookBrainz.Web, which handles the BookBrainz website itself that users
       interact with

Author:              Oliver Charles
Maintainer:          bookbrainz@ocharles.org.uk
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.9.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Library
  hs-source-dirs: src
  Build-depends:
    base >= 4 && < 5,
    aeson >= 0.3.2.11,
    containers >= 0.3.0.0,
    convertible >= 1.0.10.0,
    elasticsearch >= 0.1,
    HDBC >= 2.2.7.0,
    HDBC-postgresql >= 2.2.3.3,
    MonadCatchIO-transformers >= 0.2.1 && < 0.3,
    monad-control,
    mtl >= 2 && < 3,
    pointed >= 1.8.0,
    random >= 1.0.0.3 && < 2,
    snaplet-hdbc,
    text >= 0.11 && < 0.12,
    transformers >= 0.2.2.0,
    uuid >= 1.2.2

  Exposed-modules:
    BookBrainz.Types
    BookBrainz.Model.Book
    BookBrainz.Model.Country
    BookBrainz.Model.EditionFormat
    BookBrainz.Model.Edition
    BookBrainz.Model.Editor
    BookBrainz.Model.Role
    BookBrainz.Model.Language
    BookBrainz.Model.Person
    BookBrainz.Model.Publisher
    BookBrainz.Search
    BrainzStem.Database
    BrainzStem.Model
    BrainzStem.Model.GenericVersioning
    BrainzStem.Types

  extensions: TypeSynonymInstances MultiParamTypeClasses

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans

Executable bookbrainz-server
  hs-source-dirs: bookbrainz-server
  main-is: Main.hs

  Build-depends:
    bookbrainz,
    base >= 4 && < 5,
    HDBC >= 2.2.7.0,
    HDBC-postgresql >= 2.2.3.3,
    MonadCatchIO-transformers >= 0.2.1 && < 0.3,
    aeson >= 0.3.2.11,
    blaze-html >= 0.4.0.0,
    boomerang >= 1.1.0,
    bytestring >= 0.9.1 && < 0.10,
    clientsession >= 0.6.0,
    configurator >= 0.0.1.1,
    convertible >= 1.0.10.0,
    data-lens >= 2.0.1,
    data-lens-template >= 2.1.1.1,
    digestive-functors >= 0.1.0.1,
    digestive-functors-blaze >= 0.1.1.0,
    digestive-functors-snap >= 0.1.0.0,
    elasticsearch >= 0.1,
    mtl >= 2 && < 3,
    pointed >= 1.8.0,
    resource-pool,
    snap >= 0.6,
    snap-blaze >= 0.0.0.1,
    snap-core >= 0.6,
    snap-server >= 0.6,
    snaplet-hdbc >= 0.1.0,
    text >= 0.11 && < 0.12,
    transformers >= 0.2.2.0,
    unordered-containers >= 0.1.4.2,
    web-routes >= 0.25.1,
    web-routes-boomerang >= 0.25.1

  extensions: TypeSynonymInstances MultiParamTypeClasses

  if flag(development)
    cpp-options: -DDEVELOPMENT
    build-depends: hint >= 0.3.2 && < 0.4
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans


Test-Suite test-bookbrainz
  type: exitcode-stdio-1.0
  main-is: Tests.hs
  hs-source-dirs: tests
  ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
               -fno-warn-orphans -fno-warn-unused-do-bind
  extensions: QuasiQuotes, FlexibleInstances
  build-depends:
    base >= 4 && < 5,
    test-framework >= 0.4.1.1,
    test-framework-hunit,
    transformers,
    snaplet-hdbc,
    HDBC,
    HUnit,
    bookbrainz,
    Interpolation,
    text,
    QuickCheck,
    test-framework-quickcheck2
