Name:                bookbrainz-data
Version:             0.1
License:             AllRightsReserved

Description:
  BookBrainz is a system for recording information about books - authors,
  books and their various editions, publishing houses, and much much more. This
  documentation is about the code behind BookBrainz and is intended for
  developers.
  .
  This library contains the BookBrainz namespace itself, which consists of a
  context-agnostic API for working with a BookBrainz database.

Author:              Oliver Charles
Maintainer:          bookbrainz@ocharles.org.uk
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.9.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Library
  hs-source-dirs: src
  Build-depends:
    MonadCatchIO-transformers >= 0.3 && < 0.4,
    aeson >= 0.6.0.2 && < 0.7,
    base >= 4.5 && < 5,
    bytestring >= 0.9.2.1 && < 0.10,
    configurator >= 0.2.0.0 && < 0.3,
    elasticsearch >= 0.1 && < 0.2,
    mtl >= 2.1.1 && < 3,
    pointed >= 2.1.0 && < 2.2,
    postgresql-simple >= 0.1.3 && < 0.2,
    random >= 1.0.1.1 && < 2,
    resource-pool-catchio >= 0.2.1.0 && < 0.3,
    snaplet-postgresql-simple >= 0.1 && < 0.2,
    text >= 0.11 && < 0.12,
    time >= 1.4 && < 1.5,
    transformers >= 0.3.0.0 && < 0.4,
    unordered-containers >= 0.2.1.0 && < 0.3,
    uuid >= 1.2.5 && < 1.3

  Exposed-modules:
    BookBrainz.Model.Book
    BookBrainz.Model.Country
    BookBrainz.Model.Edition
    BookBrainz.Model.EditionFormat
    BookBrainz.Model.Editor
    BookBrainz.Model.Language
    BookBrainz.Model.Person
    BookBrainz.Model.Publisher
    BookBrainz.Model.Role
    BookBrainz.Schema
    BookBrainz.Script
    BookBrainz.Search
    BookBrainz.Types
    BrainzStem.Database
    BrainzStem.Model
    BrainzStem.Model.GenericVersioning
    BrainzStem.Types
    BrainzStem.Types.Internal

  extensions: TypeSynonymInstances MultiParamTypeClasses

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans

Test-Suite test-bookbrainz
  type: exitcode-stdio-1.0
  main-is: Tests.hs
  hs-source-dirs: tests
  ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
               -fno-warn-orphans -fno-warn-unused-do-bind
  extensions: QuasiQuotes
  build-depends:
    base >= 4 && < 5,
    test-framework >= 0.4.1.1,
    test-framework-hunit,
    transformers,
    snaplet-postgresql-simple,
    HUnit,
    bookbrainz,
    text,
    QuickCheck,
    test-framework-quickcheck2,
    random
