Name:                bookbrainz-search
Version:             0.1
License:             AllRightsReserved

Description:
  BookBrainz is a system for recording information about books - authors,
  books and their various editions, publishing houses, and much much more. This
  documentation is about the code behind BookBrainz and is intended for
  developers.
  .
  This library contains the BookBrainz search indexer daemon which watches the
  database for modifications and updates our Elasticsearch index, and a library
  to access the BookBrainz search server.

Author:              Oliver Charles
Maintainer:          bookbrainz@ocharles.org.uk
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.9.2

Library
  hs-source-dirs: src
  Build-depends:
    aeson >= 0.6.0.2 && < 0.7,
    base >= 4.5 && < 5,
    bookbrainz-data ==0.1,
    elasticsearch >= 0.1 && < 0.2,
    pointed >= 2.1.0 && < 2.2,
    text >= 0.11 && < 0.12,
    snaplet-postgresql-simple >= 0.1 && < 0.2,
    transformers >= 0.3.0.0 && < 0.4,
    unordered-containers >= 0.2.1.0 && < 0.3
  Exposed-modules:
    BookBrainz.Search
  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans

Executable bookbrainz-search-reindex
  hs-source-dirs: reindex
  main-is: Main.hs

  Build-depends:
    base >= 4.5 && < 5,
    bookbrainz-data ==0.1,
    bookbrainz-search,
    elasticsearch >= 0.1 && < 0.2,
    transformers >= 0.3.0.0 && < 0.4

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans

Executable bookbrainz-search-indexer
  hs-source-dirs: indexer
  main-is: Main.hs

  Build-depends:
    amqp >= 0.3.1 && < 0.4,
    base >= 4.5 && < 5,
    bookbrainz-data ==0.1,
    bookbrainz-search,
    bytestring >= 0.9.2.1 && < 0.10,
    elasticsearch >= 0.1 && < 0.2,
    transformers >= 0.3.0.0 && < 0.4

  if impl(ghc >= 6.12.0)
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans -fno-warn-unused-do-bind
  else
    ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                 -fno-warn-orphans
