Name:                bookbrainz-server
Version:             0.1
License:             AllRightsReserved

Description:
  BookBrainz is a system for recording information about books - authors,
  books and their various editions, publishing houses, and much much more. This
  documentation is about the code behind BookBrainz and is intended for
  developers.
  .
  This library contains BookBrainz.Web, which handles the BookBrainz website
  itself that users interact with.

Author:              Oliver Charles
Maintainer:          bookbrainz@ocharles.org.uk
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.9.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Executable bookbrainz-server
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    MonadCatchIO-transformers >= 0.3 && < 0.4,
    base >= 4.5 && < 5,
    blaze-html >= 0.5.0.0 && < 0.6,
    bookbrainz-data ==0.1,
    boomerang >= 1.3.1 && < 1.4,
    bytestring >= 0.9.2.1 && < 0.10,
    data-lens-template >= 2.1.5 && < 2.2,
    digestive-functors >= 0.4.1.0 && < 0.5,
    digestive-functors-blaze >= 0.4.0.0 && < 0.5,
    digestive-functors-snap >= 0.4.0.0 && < 0.5,
    elasticsearch >= 0.1 && < 0.2,
    mtl >= 2.1.1 && < 3,
    pointed >= 2.1.0 && < 2.2,
    snap >= 0.9 && < 0.10,
    snap-blaze >= 0.2.0.0 && < 0.3,
    snap-core >= 0.9 && < 0.10,
    snap-server >= 0.9 && < 0.10,
    snaplet-postgresql-simple >= 0.1 && < 0.2,
    text >= 0.11 && < 0.12,
    transformers >= 0.3.0.0 && < 0.4,
    web-routes >= 0.27 && < 0.28,
    web-routes-boomerang >= 0.26 && < 0.27

  extensions: TypeSynonymInstances MultiParamTypeClasses

  if flag(development)
    cpp-options: -DDEVELOPMENT
    build-depends: snap-loader-dynamic == 0.9.*
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    build-depends: snap-loader-static == 0.9.*
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans
